[gd_scene load_steps=7 format=3 uid="uid://beguyordwswmw"]

[ext_resource type="Script" uid="uid://jha6rculihp" path="res://scripts/user_interfaces_scripts/holo_deck_scripts/characters_ui.gd" id="1_ejeso"]
[ext_resource type="StyleBox" uid="uid://dtovomh45r1r8" path="res://resources/panel_style/blue_translucent_panel.tres" id="1_yqs53"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_x1ttm"]
load_path = "res://.godot/imported/holonexus_.png-619b29bf0c8b4aea3d719f26db2e2f7e.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_d5pia"]
atlas = SubResource("CompressedTexture2D_x1ttm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_15qb8"]
load_path = "res://.godot/imported/holonexus_.png-619b29bf0c8b4aea3d719f26db2e2f7e.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_vvxm4"]
atlas = SubResource("CompressedTexture2D_15qb8")
region = Rect2(64, 0, 32, 32)

[node name="CharactersUi" type="CanvasLayer"]
layer = 20
script = ExtResource("1_ejeso")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="StatsMargin"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_yqs53")

[node name="MarginContainer" type="MarginContainer" parent="StatsMargin"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HBoxContainer" type="HBoxContainer" parent="StatsMargin/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="StatsLeftButton" type="TextureButton" parent="StatsMargin/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_d5pia")

[node name="MarginContainer" type="MarginContainer" parent="StatsMargin/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsMarginGridContainer" type="GridContainer" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/h_separation = 13
theme_override_constants/v_separation = 1
columns = 2

[node name="Character" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Character"

[node name="CharacterValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "CharacterName"
horizontal_alignment = 2

[node name="Level" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Level"

[node name="LevelValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "###"
horizontal_alignment = 2

[node name="Health" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Health"

[node name="HealthValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "##### / #####"
horizontal_alignment = 2

[node name="Mana" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Mana"

[node name="ManaValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "#### / ####"
horizontal_alignment = 2

[node name="Stamina" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Stamina"

[node name="StaminaValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "### / ###"
horizontal_alignment = 2

[node name="Defence" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Defence"

[node name="DefenceValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "####"
horizontal_alignment = 2

[node name="Shield" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Shield"

[node name="ShieldValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "####"
horizontal_alignment = 2

[node name="Strength" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Strength"

[node name="StrengthValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "####"
horizontal_alignment = 2

[node name="Intelligence" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Intelligence"

[node name="IntelligenceValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "####"
horizontal_alignment = 2

[node name="Speed" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Speed"

[node name="SpeedValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "####"
horizontal_alignment = 2

[node name="Agility" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Agility"

[node name="AgilityValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "####"
horizontal_alignment = 2

[node name="CritChance" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Crit Chance"

[node name="CritChanceValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "##.##%"
horizontal_alignment = 2

[node name="CritDamage" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "Crit Damage"

[node name="CritDamageValue" type="Label" parent="StatsMargin/MarginContainer/HBoxContainer/MarginContainer/StatsMarginGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 7
text = "##.##%"
horizontal_alignment = 2

[node name="StatsRightButton" type="TextureButton" parent="StatsMargin/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_vvxm4")
